--- a/UI/code/Login_RauMa/QL_NhanVien/Form1.resx
+++ b/UI/code/Login_RauMa/QL_NhanVien/Form1.resx
@@ -120,4 +120,29 @@
   <metadata name="cl_HoTen.GenerateMember" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>False</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="btnTimKiem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACgAAAAoCAYAAACM/rhtAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAARVSURBVFhH7VdbTBxlFMZ7NDEaE33R+OD1zWia+NwHWtidpbuA1IdGEk18MVEB8ZZoxFS77M5e
+        oRWoJlCEatBQtOCDPqBld3bmn8EWwXUj5WZbFlsF08wsC3v5PQd/iDET7OzM7j7ol3zJhDmc79v/zDlz
+        puI/iWpP5FG7N/aWK0DOOQNk2eGTVCRew9/O4j37EekRFl462NzCE2BAcAWJdnhkLjU2vUaFBY3OrGxu
+        Ea/Hplcp3nMFJCCJ7vNGH2f/XjzsbRu/8YCfHK8PKWq/sJI/v5qjC3/kdyXG9EVXcvUhWXX65C7MwdJZ
+        i73B8TvrgrLY+kkilfgtq2tmNyauZOgrJxOpuhCJVbYrd7C01mBPj3KTy08kz9hCel5H/Fo5v5an7tH5
+        NFQhhjlZevOA56i/ZTCuoYCesBFijqaBeMrpJ70svTlUeYQna0OyhiXSEyyE8csZWhuUtf1ucQ+TKRz1
+        YZmclC7n9YTM8OPYr/m6kCwwmcKAMww7dm7t37vVKDEndnaVW3iIyRkHx4tvt48upPUErOD7p+fX7R7x
+        TSZnHDBW5NEfVnWTW8HTU6sUNCQmZxzQaUlpKaWb3AqKixp1BeVLTM44OF5KW9m9/yTmtnulNJMzjpIY
+        BA0mZxywDCxLi8UrcQyWClMlhjGgFLNJvjTbJDav9NrhL+ZSesmt4Lsj57Xq9lgLkzMOHNT4mruWtcoo
+        MSfuk6YGNQJGTfSEkMzpiZhhXySZhc37DJMpHLg9w3OiFmNZqObFx5iMOXA8ibw0EM9btW693B+/WsOL
+        YZbeHOxe8oYrqGiNx2eoZ2yRWrGwwmiZaBgauoFJFA44uWBd+KwaFtK0U9ykz/TM0KbBeL7Qlb954Ker
+        Lr80YX7lp/Q6zi93HuycUjvEDdqt5Kg/kqI1AVmDdf3bsn40tbXR6zkf6Xv62JSKp4bmgtF16gxMqjaP
+        2IQxep+d5Jd1Ovt7dot4XZTPTvx1Dp986lDPjHpMymyZC0F5naFJFd6Z77CwHdi80QftfKwFTieCryz4
+        ARlkbYBcfCqkTMAi0Fzplh9g4eZg6/jqFoePfNP4UVz7gPxlDstbH/5etXkJz8LKg4aAcGuNn3z3XN/P
+        qS45u2XuqLRJDx49p3I+qYOFlQcHPJHbOV5Wnj8xm+pSts1lKD6DnE/sxYZhoaVHVUC4C8zFXxhcWO8C
+        Y2gOy3uoe1qFETOMDcNCSw/bkTN3Q/lmm4cubKAxJJa38cO4BsP5a0u//I3C8Z5wr4MnS82fXdjcNtct
+        5+izvQk8ufGGth9vZqGlB7Y9nNzK6yPJzM7JAfEZtPOE1LQpt7HQ0qOyPXK/w0/QXG7n5IAvfroI5qQE
+        PpMstDyo8cniq6eWs383B2Xe4LxkaT8fvYeFlQ+wwqdxhGybax1e3oRpn4Tpfx8LKS84OMHmzy9mcZS0
+        Dl/KQlmvWPYqsgJoxuGXJ6s9sSyYVfZ5xYfZrf+xOyoq/gRFugQCsuvzEAAAAABJRU5ErkJggg==
+</value>
+  </data>
 </root>
