--- a/UI/code/Login_RauMa/DashBoar/FrmQuenMatKhau.resx
+++ b/UI/code/Login_RauMa/DashBoar/FrmQuenMatKhau.resx
@@ -117,56 +117,59 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="cl_HoTen.GenerateMember" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>False</value>
-  </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="btnThem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btnDongY.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAADcAAAAvCAYAAABHXlKwAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAALiMAAC4jAXilP3YAAAT/SURBVGhD3ZpfaFtlGMZP54UiMnsxL9yuREoRLYiwjXWD
-        brIszUnOOclJm9a6irbTMnBMZW6gCJVNZTA39ULQbYpbs662SZOu1U5vvJB2bBZBnHNTbwU3vVJhonJ8
-        vtAvvjt5lkSaPzUHfqQ8J+d5nzfnnO87f2p4ntewULFRoGKjQMVGgYqS0EehPJ0fdxrWjGlYI48a644P
-        GNGsbURA+EzECKdjRiBrGQPHBlftPvJMW2DGHApPRt+zJqPnwS+Ryeh18HvuMx37GZxX67ediTy1+8iz
-        DzyB7YKzQSMMP2cyatgK/L3+6A5jMz7Ns9tuyKJgeSVUlEizEs2tBn3hjDOP0B6aKBtso5iLTFm9aO7u
-        5dRcc3jK6saeuMSC/1fQ5EU014XmmuvW3Npjg6q5+3DIJVnIpQLfE2iudd27T9awuemw4ST7jPYPHgs6
-        WfsHFqxSoLnvNr7/eGALDvtQLZoLo7n4eFePlbV/Y4EqDX7AX0MzZkLVzuXAp/pbwfJKqCgxcRjmQWNo
-        zsSA8QcLUi2slHsddTsX6+dheSVUlDgZJw8KtVrp2GV/8Rpx0U7HWmIp13AXYXklVJSoEWuROyIZZ4IU
-        vSl2xvUCEyFv0+ktBShdrWfb3QwMMqej6djtLuZUBcsroaJE7TE74zRZGWeAFSyGamDH2SHv5fkDBShd
-        rWfbFQN7r99Jx5oAzSuhokTtfsw7a3Cefc+KFeOhkfVe8tIobAoXpav1bLti4ELhcijlru6sxGGJE3cF
-        JtR+VqgUa5Pt3tGvjsOmcFG6Ws+2KwYOTS+ccrdbE/EVsKGZNVSUdHzW0QzTc/4i5VCN5hQY1OYSY4k7
-        YUMza6goCcwGH8SlFS1Simo1p8Co2QYbmllDRQnmmF3MvByq2ZyZcXbChmbWUFGCQ+AUM9fo4V4F9bPm
-        nXu8w1+8AZvCRelqPduunGkCF9gnYUMza6gogdGXfmOJCjL4yVBuT/g5vPCmN//jOdgULkpX69l2yq/U
-        NIGBZQE2NLOGihKcb9eYuaZ9tMM7eOEQvlq5RfkpX1ZPg+Z+wldpZg0VJTD6y28sUVcbalKu5KL8lC+r
-        J/gTX6WZNVSUqHmFGOepY3PqqzSzhooSNNe4ey73MIeb56jjOXcVX6WZNVSUwGjBbyyp22iZiV6ADc2s
-        oaIE89wIM9fUa57D7dcJ2NDMGipKAjPmsrxC6U72Lf0KZejtnW3quSIrUIpqNWen3L/vvdJyP2xoZg0V
-        JQdefGVlaMqaY0VKUa3mouNdnxuesRI2NLOGipLtJ/tvsbJ2DytSiqo1l3ITG+Y2LP1+Tj31cjLOXTD9
-        1l+kFNW4EwdfR9OxVb2jvTSvhIqSxcd6Tbgj7yp1teJHjXqVfoZiZRwXP3aTerbD8kqoKMk/lJ0xb4P5
-        mL9YMfQ0oa42/JQ13PvAj5u0s/at+okcyyuhokQ/3e1Egxg1W1Hkir9oLQhOh78JTpst+R8bsLwSKkr0
-        A1BFfLzLiE3EHzYno0VvgyqNmbWvPf3Wrs17D+4z9hzak4fllVBRkhhL/MuH3Tncibhby3cFWz/dGtuH
-        xl574VVj/0v787C8EipKutGMpAd7zz71SE3f8myaDRrPv/5crqHh4eE8LK+EihLWXCTZV9P3cxtxfu2t
-        ZXO1fLNaz+aq/k58OTRX7L8Zbhxd07GroOz/Zqhac/9nqNgoULFRoGJj4Bn/AFH4D4iAUGm4AAAAAElF
-        TkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAQ0SURBVGhD7ZhtTFNXGMd7L7T0DRiUMRBFwxTrmEgYtrRh0agfFo0sIyYkM3Nuw2xzkzG1GSgx
+        MVs0Gl8in+YXgx+MSrb5mrhN2RRRcS4EtuE0xvmCkiDBOSwgIU7//1ua4O1xgUHl1tx/8gu35/yf2+eS
+        c57n3Bp06dKlS9fzJBv4EhQqnyJMs8BNyRh1E3+vAyMHI0WfAX9qofu059Dah7LJeBWf31VmIkAVkiy1
+        T9+85JL3SOUjMu4tTx3GjwSmta31SL4jp2rZjWDy5LXq0g7MdQOr4tKoSgyS1Dlj2wdXBicfRDabLsOz
+        MGDVnrzAP21dcYsoeZLomcpltFNxa0ypoC11Qd4pUeJBsja88wd8fwM7g7QiGZywpDnOipJWg2V0Ef7P
+        lUiNqFyKklvd+1Z3iRJWM+HtWacR8wiUKNFjrJmgN+urxVdFyarJqy5tlWOMLYipB3G8wVjKDFocBdPO
+        iJJVw8okyfJtxNQMxI5YI73JpihLzBXPgYqHooQHM2Hx7O/hvw+2AO6ZESsTsKmsByYODFNu0JO99b1r
+        ooSD4AjRF5818Sd4WXmKGDhaKo+2xfyO9XgJ1ydArDI6NEWBRsfrWf+5dPK/Le8yJtjPwss1P4WBo6lz
+        44sL6vAlvaakuF/wmf+loZ4UP2TVQWyfKHHi2u+7F223NMIbls2aAvrzdpfd4Zflf1fxAF/WjLGhdMgE
+        0PHyp/Mb1UkHce1ZdTfaamLDOgnC0rCKZavpiXbPh0GFaMNcacDyVO0wJdqbBscOxr3f14VG9Sd8XJZh
+        O7RVxWdPCmn5r25cwg7JSrFAcYVqKujN3v6+cON6Dq55YIy3/QoPG5WFAeFSU8ZHb5wXJTF5ZeEFzPMh
+        8hXnkzoW60yrF8V5D6/tN6e8wMT5AMMpCMMWN2qPw+v80Xu4Uli/k+fmnIHnFuABLah5oDt314p2UUyi
+        e8oPmP8LjKM53OJ76jWTI/a8q8bnFyVkTX+Rlemo4g6UzWaHx/mzyDu5bCFL5T/ASfOzEktbLXuBa+/q
+        e+qkXHt93SiVbPt8h12G61v533zRrfblfv3xDYNkuAtPMXjm4kY7boyzNuI4EFLTM31FLK1Mrj1j+fwG
+        9TxjBipOFRgzccM12zJS6tQJEnNKQgOW2gXRXFLBK2x+3LT/5ygyqkoHbS/Nyz6pThLdtoeNTj0+Y0cJ
+        3239IIc30IJ4rvdnfBK6VEJAyUQjbIJ/sxKpIS0C96dvWXpZmPgAaYu8tfDxRypN/jxSKclS68zdZbdF
+        ybtrfJ0GSboD35sBu/YkgT3RNstvPKmqHyDBlcmNy0OapsU3tXPm5PgGnG/6g8nn7lzOH2j5EpRHk9aV
+        BC5aJybX48jxLx+AD4SxamU2QjQeXLc7046nL51zCtedIJkTkSS+O7eDPsAqFZFis1oRuNSlS5eu518G
+        w2P/N+rBPSQwEwAAAABJRU5ErkJggg==
 </value>
   </data>
-  <data name="btnXoa.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btnHuy.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAADcAAAAvCAYAAABHXlKwAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAALiMAAC4jAXilP3YAAAM/SURBVGhD7djJTxNxFAfwXjTRg/Gkd89qPHqRk6aePBgU
-        FLm4sBUhuLG4IwQXiBRwoUDbQGmLsmhETUwoGMOiHGwpIm1BuBhNiH/D871fOzCWpz4MDTKZwydDv/Pr
-        fN/LHEhqAQDDYkOjYEOjYEOjYEOjYEOjYEOJE7ahZbJsg5ptqBMz+Jts21s/2o4sBLNluH4JNpTghiDZ
-        cemIhv+BQn+wgOhcNmKfR7h+CTaU4IbQOYxo6FpdxrmO/tvltqC9DG3oZ7qM40d0rkaX6W1FbL8EG0pQ
-        KdqPaLhUOYTYfgk2lKBStDsxRKrQ22P7JdhQAkut6HxiiFSpQFauX4INJZKGSKnkbik2lOCGSJXkbik2
-        lKD/Y8fzByH99AAcORNHfx/NCag8IzeweI+uGVqO119yPEc5fU/LtXuUZxeuwXKZeQFPVsHQm9Kqcbhw
-        871ysfIDFF8dg1Ml78BWPgKXbn1QOV2LLo/CSczP4lWfF1aMqPPFV0bV97VnlVWP01sbyMwNeLh+CTaU
-        wFJLtT24o/fVPHQ9/6L09M+BwzMN526MQV1zGPoS9+hMk3MKSq6NQWPblPpMOd2/7wir883tn6Hn5dKz
-        +l7Pw+3G0K5jeYNsvwQbSlTWfbR0v5hLc/qi4PLHdTyNQUPbJ3x7o1DTGILOnhmVe/Ba9zgMRfh2ah+F
-        1WfK6f6dppA6b2+ZhI7ueE7oud39c9aq+iDbL8GGEr6+WQsOkKYNQ1ZzOYLPt3qxh+uXYEMJLCcpXQ5Z
-        EdsvwYYSVIrM5czlzOVWhg0lqBSZy5nLmcutDBtKUCkylzOXM5dbGTaUoFJkLmcutx6Ws7dOQkH5MFTb
-        g+DtTSyB13sPJyC/bBjuPphQnymn+zUNQXW+3hHmljuI2H4JNpRwYynahxaHcXdFodUbgSbXFDg6ptVn
-        LW/xTKvfUeiqz+k3Fzrf2hlZzHUOILZfgg0lXP4I2Ym+6weiAdvxDbq7YvohdflSFs9jv8mjC2gPYvsl
-        2FDC5cXlvJENLl+kVD/UanH6YqVO38xGxPZLsKFEYjmL2xfd3P5kNgcH+po84D/6hovl41KbaLE1WW49
-        YEOjYEOjYEOjYEOjYENjAMtP3PgoRvGYxmAAAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAWSSURBVGhD7ZhtbFNVGMd7S9utGyvr6EbXtd3aLqhTYJsOlLHxsjdiNCFoYtAgaPyiCyYaiRr9
+        AImKRjTRDya+YCQhanwD5ItREHkZgzGZ22DAGAH20m0dDMY22m2w+f/f9sJd7XBrvF2J+ye/tPee52mf
+        e+45z3POUU1pSne+tIHPSVMJ+AFoxKuJaRHY7/8aeTnAdnBNLaja8fkcb05QX4ERwE6ImATwIvBmxmkP
+        1xTa3etdxt9xfQHEgPFqFvAm69TH8NkIYnlTafFPvkePX/xy3qyay8tdI6Sj1Nk/TVA1o+0l0Wp82hCv
+        ERrbSx19WkE4h+uN/tvKiT2/J1YtnK0ttLdLwUtsnJ20D+3dIInG/yJ2ROdrmcZK+m7LMR/BtRfcxUYl
+        9eOTaQkHgoMn3ctdNxI06lrYfOQ3va3W8i22lzoHJP+5CTEchgdBOMlg3EoGHWWm+N3y4CV25KXWo30A
+        zKbxbfTnytTpFXLf5uKMPp0gcB695TdRTgvBtXXOxFEBSLjitAfQzuw0lpg6fSeXpncH++7Is9SwDSyj
+        oZJ6DHh3zbecCg6iusB+nm2gkIYhtDPboDsU7CfxhMXwG2zcIEW0VlAbkHnaG5amdwUHscyk3432KsCJ
+        Lxd7f7BikbU52EeipcTZA6ce2L0geigoBvcNUuFpd7HzmjyI5mLHFUzSDrSvES39on1VQZL+oNxWDhOB
+        Ta+phN0fICJLjATQEGpIPJ8+Yw/aOJykArUCT9CHsX8p2FZidZo4fFjV00SPCCkTXC7PGD2pL5a5hlAz
+        TqPtTcDebFw1RgomH9+XzMnfB3JBxPUI8G3PGz2pP5ubwuHQCzZqBMHtluV9OfsXWhvxdq7CbjWYNL2v
+        UwsXzhc5euXBzdROq0bbyCsuY8jM01rs7MWbOgWbz8VfmUSxgu5zxGmrMBlvBnhkka0pUauu85Q5r8sD
+        J7AbdvrrBt/URBaCiomTz/Os3TAq01wqc92QX0ustc5gumXOt9A5WrQEDGzNNteHClri69zUo7DrBwvo
+        FG16B3XAE6rIkaZlji4UwRbYMUNFpR4Ew9/ebz4eHDyG03VzrOYw2n8FahpHmxLB2eLkuJA5f9M9Ju6B
+        u4Dia51wxOXCT0k69fGuMmfIiVu32O4O5Pwi0SPK9DqC665bYu8IFbxEIPt0AqvoFSV6FPi25syqDRX0
+        prtnVqAS+wLXzP/cfVUAHZ0nW3PA1fVjVNt3s0wsVsNWvaYak3iY9wIVmGulT/gDkymeD7WVjDFpWYkD
+        Y/4N4FljM9y0qyqws+0y7j8DJkU82zkzx6Crli8fJDpKnT3o5ROw2Spaq1QPA98vC6w30+un88w8F2JB
+        e4AGkZQR1JhjNMc6S51D8sAlcmbE7IUNHyCeDgF9wKMZ2XwYWWGezknNsyGm4IiIa556o1Z9vLXE0S8P
+        WiJwTsT1fRYdZOKiraHIdGvIce+ABR/fxE4wjUZKaiXwZOi1VW0lTq88aIlD+bYzGNvcBzwtevxTrNS+
+        vQ/Zzkk+9YvTW7C8aMX98Zwrha3NYKjckXiQS2F50BIYTl69WjgJuy9Ej7G1JRXDT+5bmW9rwkO0oW2d
+        3+S/11Ng8MN7TUflfyxneUo8x3MTkI/7ULIB73e55hNy/+pC+1nc56TOp5ESKgeDj6cm7A/OPLvmW3i0
+        yJO5sc6EgrV5pk5dJ/+Nn+dbuIPj4ZZBtFBIS4EnJzG2QnqIwCaeW8OJjGEu6Pq2ZN+q3g69uEOT0q6i
+        4mlEF96EmE1ezTQyZfIsaDobJ6D3EjTqk+yInXmWv3A9CBQ/pZZUALxcImNDz2VBOJPPBK5uzkqujNMI
+        dfge8aXFKsBxz/PQcAvR24G0ewXwBDziYs8zxYYrTljWgJfFqztUeoAXMaUpTel/JJXqb47tbxzs43nt
+        AAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="btnLamMoi.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -204,42 +207,6 @@
         JHPrUN9mrndO/isQmePsyGJ4IgwxfnFB+N8cz1gmHEttw/qupqFvDNeE5orjG44wN/v/8vxHcyZMYHyy
         jqClNJjD4nWCqsKcpKef17rHXov0ja+QjDTddubuVITBakEYrBaEwWpBGKwOCvQvNFmAx8WIJ1QAAAAA
         SUVORK5CYII=
-</value>
-  </data>
-  <data name="btnSua.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAADcAAAAvCAYAAABHXlKwAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAALiMAAC4jAXilP3YAAASqSURBVGhD3ZlNbFRVFMfvfHRedWXULowGY0QTFybGIpAu
-        aisfEY1LILFVlNYWqolGEUkMggGCUJESrNNKFFE3xoUfFUE+ppSKbXRT6KJjoht3IlHaKVBpyfF/5s1l
-        7ntz3lBf38y0s/il03POzD2/nPfm3tcqIipbxGC5IAbLBTFYLohBJ1xTBCZUlA6rV2mbStCIqqUxxG7E
-        NYA3eyEGnXBNgWGxHvUC7VGj1I1Qpxqi99UCoPA6C//O7Af7QArgA7wQg064poBcSYu1ULtKpcW6rnMO
-        LEBMXacrQxyw7KyW8xbTnEU8Kxi4XCqcZTSk6Dzek4+/PMitjdD3qpV2qcseYjbdmKAWDFzu+E02CdBT
-        qWg33vMe2OtBhwfOujBoxf0zkVdM062G04KBy/VBiOkHP1j2Dc0frhdyoy8hN9maMFgH/gWyjAQLdqlq
-        MGvlQuD/i2UZAtWzVW49uAqkxqfLWaz/8GyTC0LMJo4JdqoayEXEnjOIQQfByLUgF4yYplP1Qu4WsecM
-        YtDBzOWawSXk5Cb9cYE+UK9A7max5wxi0MHM5NaDScSlBv1yATRArqT3XKHEGoEqpRyLBXuPdam/se4z
-        +GmvUyK5womZ65ZAjsX8btBe/IP1nk2vWUI5PnlMAKlBv1x0iJVIjsWuAKlBv4xinTUOsRLIFU/MXLcI
-        cq3gMpAa9MsokMWYIsmx2DiQGvRLCqwBuVKaIsjxWbEQYs8Bu3lJjCmY3FGrgvapNnw4NyI16JfsxEom
-        d8K6lw6Gkpie1KBfeF9sAtnGGUmM0flA5I7yxMCxyiidtl6kY7FxOhRO0n6k5WanTxyXdlwQYyQxRucD
-        kfszbPNH5FY6VfkN/WgRHY8l6eAMBeN4DOIN2hQykcQYnQ9ELl2TZh4uy4uYHlG/dQ0TTNIn4RFfgvbE
-        7JOHKWTiltLofCBywxGboegSOgWxPmALTmUE7QlO5090TBxfHtJZ0Y0pZKLzgcglcEmejFi4FLemxTRO
-        QXuCNxbkidmne3ezbswaE50PQm7wy7vU8Fd33Eb9Fb0OuazgJARHpnGJ8sScYmazbtx1Gp0PQu7rz+5T
-        vV/cfQ+diU7kyGlYkL9kvAXH0FhjTqNms26kWkbng5D7vKO64kD74pc/bl9M9FMI04rlE+QJur9FvcUY
-        U8hEqmV0Pgi5nZuX3r75jRUDy55upkN7FhIN5BW8mhHUE+TnsYacBk1MIROpltH5IOQ6d9Tc2fzSysna
-        VetoRWMTBB/JL2jvg2PY6H/GSWYtGgrlNGhiCplItYzOByHXtWNR9fKGJuLJ1a1upccb18oT7AUJ6xJe
-        H6FBawN9G3mAOlREbNDEFDKRahmdD0Ju99a6d+tXt6TllgKeIL/+qH0R0ZnIFAQTdDK2hZLRx+h8ZD6O
-        alWQi9F32Bv5X1dSgyamkIlUy+h8EHKbNj75ax3k6jG1ZQ3N1NS2cmrTxid+2fV2/Ya+T++fTwPhKjoR
-        s+h3yIxjTzyCc+ggHo165oDca68/ldry5vJzH75Ts617+6MPPd+2at7Ot5ZU7d1eW9Fz4EGIhPC0EFP0
-        G2TG5pjcXEYMlgtisFwQg+UBqf8AM/FyjeWAnBMAAAAASUVORK5CYII=
-</value>
-  </data>
-  <data name="btnTimKiem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAOpJREFUOE/V
-        kj0KwkAUhFP4g6W3EC1E+0BAC3OAQP7q3EC0svAmVoKVWKi14iUSsRJLay1Ev5VXuLD+NCIODMu8nXlv
-        Nxvrq3AcJxeGYS+KogweYQoHnueVxPIcKhzH8ZrA3Pf9Bo3KaqU2prZR+2I1A1MfTkVqoMkMdkWaQXgX
-        BEFFpAb2qjTYijQD05m7FkRqcF23yJVOIs1QEzhBTaQG9uoMyESawYQhxolIDYQXb78Bhg7GK7y/QpIk
-        eWpN9BKuXr4CRhvTgdV5+A8uMFWTX4YJtDHu1TQpfQ6Crd+EFTj6iLAt8m9gWTfdj2MXkSeLMwAAAABJ
-        RU5ErkJggg==
 </value>
   </data>
 </root>
